<resources>
    <string name="app_name">LahiriPhysicsClasses</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="virendra_kumar">Virendra Kumar</string>
    <string name="phone">Mobile</string>
    <string name="_91_7898616980">+91 7898616980</string>
    <string name="_23_05_2020">23/05/2020</string>
    <string name="logoimages">logoImages</string>
    <string name="profile">Profile</string>
    <string name="trips">Trips</string>
    <string name="explore">Explore</string>
    <string name="name">Name</string>
    <string name="classesName">Class</string>
    <string name="subject">Subject</string>
    <string name="mca_cs">MCA CS</string>
    <string name="admission_date">Admission date</string>
    <string name="admission_date_expire">Admission date expire</string>
    <string name="_15000_00rs">15000.00rs</string>
    <string name="reference">Reference</string>
    <string name="vr">VR</string>
    <string name="remarks">Remarks</string>
    <string name="virendra">Virendra</string>
    <string name="total_fees">Total fees</string>
    <string name="mca_iv_sem">MCA IV Sem</string>
    <string name="get_start">Get Start</string>
    <string name="username_or_email">Username or email</string>
    <string name="welcome_to_login">Welcome to Login</string>
    <string name="welcome_nregister_page">Welcome \nRegister page</string>
    <string name="father_name">Father Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="welcome_nsign_up_page">Welcome \nSign up page</string>
</resources>
