<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="45dp"
    android:paddingVertical="10dp"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:fontFamily="monospace"
        android:text="@string/welcome_nsign_up_page"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:elevation="8dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatherName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/Yello"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:backgroundTint="@color/Yello"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
</LinearLayout>